bmi-health-tracker/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bmi-health-tracker
  labels:
    name: bmi-health-tracker
    app: bmi-health-tracker
